--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT= 3000
-MONGODB_URL="mongodb+srv://rashidmazhar0507:ESBm1Il6n5R58BPA@cluster0.bppp22y.mongodb.net/AuthDatabase"
-JWT_SECRET=rashid
+PORT= //enter port number here
+MONGODB_URL="enter your mongodb url here"
+JWT_SECRET= //enter JWT secret token here
